--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="sweetalert2.all.min.js"></script>
-    <title>React App</title>
+    <title>Food Recipes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
